external-crates/move/crates/move-package-alt/tests/data/manifest_parsing_invalid/basic_missing_dep_override_git/Move.snap
---
source: crates/move-package-alt/tests/parsing_tests.rs
---
error: TOML parse error at line 12, column 41
   |
12 | foo = { rename-from = "Foo", override = "true", rev = "releases/v1", git = "https://example.com/foo.git" }
   |                                         ^^^^^^
invalid type: string "true", expected a boolean
